--- a/github-app/app/build.gradle
+++ b/github-app/app/build.gradle
@@ -39,6 +39,11 @@ android {
 dependencies {
 
     def nav_version = '2.5.3'
+    def koin_version = '3.4.0'
+    def coroutines_version = '1.6.4'
+    def retrofit_version = '2.9.0'
+    def gson_version = '2.9.0'
+    def glide_version = '4.15.1'
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -50,4 +55,13 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    implementation "io.insert-koin:koin-android:$koin_version"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$gson_version"
+
+    implementation "com.github.bumptech.glide:glide:$glide_version"
 }
